compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__const_imported_multiple_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other\npub const main = other.Two(b: 2, c: 3, a: 1)\n"
---
----- SOURCE CODE
import other
pub const main = other.Two(b: 2, c: 3, a: 1)


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export const main = /* @__PURE__ */ new $other.Two(1n, 2n, 3n);
