compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__destructure_custom_type_with_named_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\ntype Cat {\n  Cat(name: String, cuteness: Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let assert Cat(cuteness: 4, name: x) = cat\n  x\n}\n\n"
---
----- SOURCE CODE

type Cat {
  Cat(name: String, cuteness: Int)
}

fn go(cat) {
  let Cat(x, y) = cat
  let Cat(name: x, ..) = cat
  let assert Cat(cuteness: 4, name: x) = cat
  x
}



----- COMPILED JAVASCRIPT
import { CustomType as $CustomType, makeError } from "../gleam.mjs";

class Cat extends $CustomType {
  constructor(name, cuteness) {
    super();
    this.name = name;
    this.cuteness = cuteness;
  }
}

function go(cat) {
  let x = cat.name;
  let y = cat.cuteness;
  let x$1 = cat.name;
  if (!(cat instanceof Cat) || cat.cuteness !== 4n) {
    throw makeError(
      "let_assert",
      "my/mod",
      9,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: cat }
    )
  }
  let x$2 = cat.name;
  return x$2;
}
