compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__imported_ignoring_label.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other\npub fn main() {\n  other.Two(1)\n}"
---
import * as $other from "../other.mjs";

export function main() {
  return new $other.Two(1n);
}
